...
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.groupup.activity.login.LogInActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
...
            android:id="@+id/text_view_account_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_account_type_text"/>

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
...
