<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="ch.epfl.sweng.groupup.activity.event.description.EventDescriptionActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/file_management_tv_description"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_files"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_weight="1"
            app:backgroundTint="@color/secondaryColor"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_file"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_aftermovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_weight="1"
            app:backgroundTint="@color/secondaryColor"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_movie"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/take_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_weight="1"
            app:backgroundTint="@color/secondaryColor"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_take_picture"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/take_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_weight="1"
            app:backgroundTint="@color/secondaryColor"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_take_video"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/scroll_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout"
        android:layout_below="@id/description">

        <!-- For now let lint ignore the fact that one of the layout is
            useless, they are both needed for now, have to find another
            solution in the future maybe.
             This is done with tools:ignore -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <GridLayout
                android:id="@+id/image_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3"/>

        </ScrollView>

    </RelativeLayout>

    <ImageView
        android:id="@+id/show_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout"
        android:layout_below="@id/description"
        android:contentDescription="@string/full_screen_image_content_description"
        android:visibility="invisible"/>

    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout"
        android:layout_below="@id/description"
        android:visibility="invisible">

        <VideoView
            android:id="@+id/show_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/full_screen_video_content_description"/>

    </FrameLayout>

</RelativeLayout>
