<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GroupUp</string>

    <!-- ToolbarActivity -->
    <string name="toolbar_image_left">Most left icon in toolbar</string>
    <string name="toolbar_image_second_right">Second most right icon in toolbar</string>
    <string name="toolbar_image_right">Most right icon in toolbar</string>
    <string name="toolbar_title_add_members">Add Members</string>
    <string name="toolbar_title_create_event">Create Event</string>
    <string name="toolbar_title_user_profile">User Profile</string>

    <!-- Welcome page -->
    <string name="welcome_view_powered_by">Powered by Flying Monkeys Team </string>
...
    <string name="alert_dialog_title_delete_event">Deleting Event</string>
    <string name="title_activity_map">Map</string>

    <!-- File Management -->
    <string name="file_management_tv_description">Here you can see the files of the event and add some new ones !</string>
    <string name="file_management_button_add_file" tools:keep="@string/file_management_button_add_file">Add file</string>
    <string name="file_management_toast_error_file_uri">An error occurred when recovering the media</string>
    <string name="file_management_toast_error_file_not_created">"Error While creating the file"</string>

    <!--Event Invitation -->
    <string name="event_invitation_title">You are invited to an event !</string>
    <string name="event_invitation_dialog_decline">Decline</string>
    <string name="event_invitation_dialog_accept">Accept</string>
...
