<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="ch.epfl.sweng.groupup.activity.event.listing.EventListingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <!-- ScrollView of all future events, the create event button, -->
    <!-- and all past events --><ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar">

    <!-- The LinearLayout of all the elements in the ScrollView -->
    <LinearLayout
        android:id="@+id/linear_layout_event_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

    </LinearLayout>
</ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/secondaryColor"
        app:srcCompat="@drawable/ic_pen"/>
</RelativeLayout>
